fixing scrollbar for new window controls

--- a/src/scrollbar.css
+++ b/src/scrollbar.css
@@ -18,7 +18,3 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #1a1a1a;
 }
-
-::-webkit-scrollbar-track {
-    margin-top: 5vh;
-}
